update ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ node_modules
 .contentlayer
 .next
 __registry__
+!public/r/**/*.png
+public/r/**/*
+!public/r/index.json
+!public/r/themes.css
+!public/r/facebook.json
