--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@faker-js/faker": "^8.2.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.10.0",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -81,8 +82,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
-    "react-resizable-panels": "^2.1.7",
     "react-icons": "^5.4.0",
+    "react-resizable-panels": "^2.1.7",
     "react-wrap-balancer": "^0.4.1",
     "recharts": "2.12.7",
     "shadcn": "2.1.8",
