--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-wrap-balancer": "^0.4.1",
