--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# -----------------------------------------------------------------------------
-# App
-# -----------------------------------------------------------------------------
-NEXT_PUBLIC_APP_URL=http://localhost:3001
+NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
