--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next": "14.3.0-canary.43",
     "next-contentlayer2": "^0.4.6",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.258.5",
     "puppeteer": "^24.2.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
